cdk.out/MoonTrackerInfraStack.template.json
{
 "Resources": {
  "MoonAgentVpcC7FAAEA6": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/Resource"
   }
  },
  "MoonAgentVpcPublicSubnet1SubnetD362D356": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1/Subnet"
   }
  },
  "MoonAgentVpcPublicSubnet1RouteTable68C6C1A2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1/RouteTable"
   }
  },
  "MoonAgentVpcPublicSubnet1RouteTableAssociation271967BC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MoonAgentVpcPublicSubnet1RouteTable68C6C1A2"
    },
    "SubnetId": {
     "Ref": "MoonAgentVpcPublicSubnet1SubnetD362D356"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MoonAgentVpcPublicSubnet1DefaultRoute082F7126": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MoonAgentVpcIGWDAA26856"
    },
    "RouteTableId": {
     "Ref": "MoonAgentVpcPublicSubnet1RouteTable68C6C1A2"
    }
   },
   "DependsOn": [
    "MoonAgentVpcVPCGW0A4FEAF8"
   ],
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "MoonAgentVpcPublicSubnet1EIP26D4531E": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1/EIP"
   }
  },
  "MoonAgentVpcPublicSubnet1NATGatewayE7E8F5FA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MoonAgentVpcPublicSubnet1EIP26D4531E",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MoonAgentVpcPublicSubnet1SubnetD362D356"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MoonAgentVpcPublicSubnet1DefaultRoute082F7126",
    "MoonAgentVpcPublicSubnet1RouteTableAssociation271967BC"
   ],
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet1/NATGateway"
   }
  },
  "MoonAgentVpcPublicSubnet2Subnet03078E54": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2/Subnet"
   }
  },
  "MoonAgentVpcPublicSubnet2RouteTable5656421E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2/RouteTable"
   }
  },
  "MoonAgentVpcPublicSubnet2RouteTableAssociationA2E2C3FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MoonAgentVpcPublicSubnet2RouteTable5656421E"
    },
    "SubnetId": {
     "Ref": "MoonAgentVpcPublicSubnet2Subnet03078E54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MoonAgentVpcPublicSubnet2DefaultRoute89082467": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MoonAgentVpcIGWDAA26856"
    },
    "RouteTableId": {
     "Ref": "MoonAgentVpcPublicSubnet2RouteTable5656421E"
    }
   },
   "DependsOn": [
    "MoonAgentVpcVPCGW0A4FEAF8"
   ],
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "MoonAgentVpcPublicSubnet2EIPDF4B820C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2/EIP"
   }
  },
  "MoonAgentVpcPublicSubnet2NATGateway1A9C579B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MoonAgentVpcPublicSubnet2EIPDF4B820C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MoonAgentVpcPublicSubnet2Subnet03078E54"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "MoonAgentVpcPublicSubnet2DefaultRoute89082467",
    "MoonAgentVpcPublicSubnet2RouteTableAssociationA2E2C3FF"
   ],
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PublicSubnet2/NATGateway"
   }
  },
  "MoonAgentVpcPrivateSubnet1SubnetF34DD01E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet1/Subnet"
   }
  },
  "MoonAgentVpcPrivateSubnet1RouteTable3734F4AD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet1/RouteTable"
   }
  },
  "MoonAgentVpcPrivateSubnet1RouteTableAssociation7BDFDF65": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MoonAgentVpcPrivateSubnet1RouteTable3734F4AD"
    },
    "SubnetId": {
     "Ref": "MoonAgentVpcPrivateSubnet1SubnetF34DD01E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MoonAgentVpcPrivateSubnet1DefaultRouteBEA0BD3F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MoonAgentVpcPublicSubnet1NATGatewayE7E8F5FA"
    },
    "RouteTableId": {
     "Ref": "MoonAgentVpcPrivateSubnet1RouteTable3734F4AD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "MoonAgentVpcPrivateSubnet2SubnetB12B662A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet2/Subnet"
   }
  },
  "MoonAgentVpcPrivateSubnet2RouteTableFCC93485": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet2/RouteTable"
   }
  },
  "MoonAgentVpcPrivateSubnet2RouteTableAssociation457A1F94": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MoonAgentVpcPrivateSubnet2RouteTableFCC93485"
    },
    "SubnetId": {
     "Ref": "MoonAgentVpcPrivateSubnet2SubnetB12B662A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MoonAgentVpcPrivateSubnet2DefaultRoute19EE83ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MoonAgentVpcPublicSubnet2NATGateway1A9C579B"
    },
    "RouteTableId": {
     "Ref": "MoonAgentVpcPrivateSubnet2RouteTableFCC93485"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "MoonAgentVpcIGWDAA26856": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MoonTrackerInfraStack/MoonAgentVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/IGW"
   }
  },
  "MoonAgentVpcVPCGW0A4FEAF8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MoonAgentVpcIGWDAA26856"
    },
    "VpcId": {
     "Ref": "MoonAgentVpcC7FAAEA6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/VPCGW"
   }
  },
  "MoonAgentVpcRestrictDefaultSecurityGroupCustomResourceA57FAEDB": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "MoonAgentVpcC7FAAEA6",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "MoonAgentVpcC7FAAEA6",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "MoonAgentCluster74ACDA60": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentCluster/Resource"
   }
  },
  "MoonAgentTaskRoleB76DCFF0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/MoonAgentTaskRole/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/82UTYvbMBCGf8vquChuN4VQfHNMKYHSNUnZQ8NSJvIkmUaWjEZy6hr/9+KPXS+BntqDTxq9Gg0P0juzjB4+rqL3d3DlhcovC02HqNl5UBcJV/7RoFpGzVOp9o0o4Ffym0Us7kX7LNOjecpSmYWDJrULB4N+3wiogDQcSJOvv1uDfbYUVak2+Rgryt1aW3UZ9wWUQ5FN+Wi+QDDqLGLvAkpBZbVKb9KBmU5mU1arJM8dMj+a1CF4smZAkzOh6EHy/Cv4z+DxCrWI9+JePM8GcB4Uf32m3mKDsbpoa4PHb3DQOOmTljBbRX3h1+Qu+LTJumWqLjNHFXj87449guYZ/MW/YcyHZCYYgws3xqMz+OqhYfaNu8R7UOcCjW8lKo6aVAf26PZNB/tmXI56KwmKqNlajZ39mEOB+boWcSNKR0ZRCTpRygbjJ85QYHchUW/gRAEGTphnV [...]
   },
   "Metadata": {
    "aws:cdk:path": "MoonTrackerInfraStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
